--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="gramentheme">
-        <meta name="description" content="Prinoz - Printing company & Service Html Template">
+        <meta name="description" content="Stremker - OTT Platform and Video Streaming HTML Template">
         <!-- ======== Page title ============ -->
-        <title>Prinoz - Printing company & Service Html Template</title>
+        <title>Stremker - OTT Platform and Video Streaming HTML Template</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/favicon.svg">
         <!--<< Bootstrap min.css >>-->
@@ -186,9 +186,6 @@
                     <div class="section-title text-center">
                         <h2><img src="assets/img/lightning.png" alt="img">TRENDING NOW</h2>
                     </div>
-                </div>
-                <div class="cta-movie-banner bg-cover" style="background-image: url('assets/img/movie/movie-bg.jpg');">
-
                 </div>
             </div>
         </section>
@@ -996,6 +993,65 @@
                 </div>
             </div>
         </section>
+
+        <!-- Footer Section Start -->
+        <footer class="footer-section footer-bg">
+            <div class="container">
+                <div class="footer-widgets-wrapper">
+                    <div class="newsletter-items">
+                        <h3>Subscribe to newsletter</h3>
+                        <div class="newsletter-input">
+                            <input type="text" name="email" id="email" placeholder="Email address">
+                            <button type="submit" class="theme-btn">
+                                Subscribe
+                            </button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="footer-social-box">
+                                <h2>follow ticsTube on social</h2>
+                                <div class="social-icon d-flex align-items-center">
+                                    <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="footer-social-box scaner-box">
+                                <div class="content">
+                                    <h2>Get the ticsTube app</h2>
+                                    <p>for android AND ISO</p>
+                                </div>
+                                <img src="assets/img/scaner.png" alt="img">
+                            </div>
+                        </div>
+                    </div>
+                    <ul class="footer-list">
+                        <li><a href="about.html">about us</a></li>
+                        <li><a href="news.html">blog</a></li>
+                        <li><a href="pricing.html">pricing plan</a></li>
+                        <li><a href="index.html">ticsTube</a></li>
+                        <li><a href="movie.html">top trending</a></li>
+                    </ul>
+                    <ul class="footer-list-2">
+                        <li><a href="contact.html">press room</a></li>
+                        <li><a href="contact.html">advertising</a></li>
+                        <li><a href="contact.html">conditions of use</a></li>
+                        <li><a href="contact.html">privacy policy</a></li>
+                        <li><a href="contact.html">Your Ads Privacy Choices</a></li>
+                    </ul>
+                </div>
+                <div class="footer-bottom">
+                    <p class="wow fadeInUp" data-wow-delay=".3s">
+                        © Copyright 2024 Company.com
+                    </p>
+                </div>
+            </div>
+        </footer>
        
        
         <!--<< All JS Plugins >>-->
